--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./sass/index.scss" />
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./filmoteka-service.js"></script>
 </head>
 
 <body>
